Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85999

Balsam not handling filenames with dot

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.15.1, 6.0.0
    • 6.0
    • Quick: 3D
    • None
    • 1
    • Qt Quick 3D - 33 - 34

      Balsam file extension detection should be improved to detect file extension correctly even if the the filename contains extra dots.

      Trying to export e.g. "Dragon_2.5_fbx.fbx" with balsam errors with: Failed to import file with error: "unsupported file extension 5_fbx.fbx"

       

        For Gerrit Dashboard: QTBUG-85999
        # Subject Branch Project Status CR V

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes