Fix balsam imports with filenames containing dots

All supported file types are single-extensions, so use suffix()
instead of completeSuffix(). Also support uppercase in all places.

Task-number: QTBUG-85999
Pick-to: 5.15
Change-Id: I2a3f948b1d1edcdc16ec422c20aa3cdb35634f55
Reviewed-by: Andy Nichols <andy.nichols@qt.io>